Revision history for Mojolicious-Static-Role-Compressed

{{$NEXT}}

0.02  2019-05-06 21:57:51 CDT
        - Use index instead of regex to detect allowed encodings from the Accept-Encoding header.

0.01  2019-04-23 23:15:14 CDT
        - Initial release